--- a/Dermatologia/index.html
+++ b/Dermatologia/index.html
@@ -119,7 +119,7 @@
 
 
         <footer>
-                <p><small>© 04-03-2021 Karla Jazmin Hernandez Corona.</small>
+		<p> <small> Gonzalez Rosales Briant Gustavo </small> </p>
                 <small> Todos los derechos reservados. </small></p>
             </footer>
        
